[package]
name = "tree-sitter-fine"
description = "Fine grammar"
version = "0.0.1"
authors = ["Eduardo García Maleta <egmaleta@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fine"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/finelang/tree-sitter-fine"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
